fix: resolve all remaining bugs from 4-pass audit
Fixes across 55 files covering livelock, race conditions, resource leaks,
logic errors, and invariant gaps identified in new_bugs.md.

Key fixes:
- ChaosHandleRegistry: bounded 2-pass drain in stopAll() (C-1), re-check
  closing after put() to prevent ABA handle escape (M-1/N-M7)
- ChaosScenario.Builder.tag(): eager null validation for key and value (Q-M1)
- ChaosDiagnostics.ScenarioReport: enforce appliedCount <= matchedCount (Q-M2)
- DirectBufferPressureStressor: cache cleaner.clean() Method as static final (M-4)
- ChaosQuarkusExtensionTest: remove redundant @ExtendWith on nested class (Q-M5)
- SessionLifecycle.captured: add volatile in SB3, SB4, Micronaut tests (Q-M7)
- chaos-agent-testkit: promote junit.jupiter.api to api scope (Q-M3)